cabal-version:      3.0
name:               clay-ui
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Liam Dyer
maintainer:         liamd94@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        Clay,
        Clay.Render,
        Clay.Layout,
        Clay.Raw,
        Clay.Raw.Types 
    other-modules:
        Foreign.Extra
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -fwrite-ide-info
        -hiedir=.hie

    c-sources: cbits/clayhelper.c
    include-dirs: include
    includes:
        clay.h
        clayhelper.h

test-suite clay-ui-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        clay-ui,
        hspec >= 2.11.12
    other-modules:
        RawSpec,
        Raw.TypesSpec
